Fix #26: Overlapping problem with annotations resolved, removing the annotation selection problem.

--- a/style/annotations/base_layout.less
+++ b/style/annotations/base_layout.less
@@ -12,7 +12,7 @@
     .inset-box-shadow(0px,0px,15px,#A29D95);
     .box-shadow(0px,0px,5px,#D9D2C0);
     margin-bottom: 20px; 
-    overflow: auto;
+    overflow: hidden;
     max-height: 40%;
     
    .window-title{
